# spotify-archive

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: archive-playlist.yaml  archive-user-playlists.yaml  linter.yaml
archive/albums/llc1xxsoknqgh69956sifvyi5/: 1s6b5aZcmVwM0v5kW71w0J.json  README.md
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/01BPCMiueGeMcb61XgYMAw/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/0ByO94WRJ7GhrGRvSeIYLH/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/0i0RaQ0GSkdNGTTxOS7ebO/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/0rUZKPWIBEUAvmLc49zTZi/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/0tRKDGjHTPzUUJXvgTUyRO/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/1F1fu1aBQi3J4kiEn7Sa5Y/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/1JFgIAUr03P6faVW78farE/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/1PZAtLHrm43UeKVSmWduVH/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/1RCwTjyq2QiyWT5bh4WfjX/: README.md  output.json
archive/playlists/502bg_4woroafc3tx648l7zc8quofbf/1yhzNXD7jViZg9r86N5Fcr/: README.md  output.json
archive/playlists/llc1xxsoknqgh69956sifvyi5/: 1s6b5aZcmVwM0v5kW71w0J.json  4Lzen2cvZjP5xf3HVZM9zG.json  README.md
archive/playlists/zbzko8w71byjcyunznqxhn3cx/: 22fr05XpGbJVQChpAs0EKP.json  README.md
src/: archive.py  models.py
(+248 files in other folders)
